--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.main {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
     display: block;
     text-align: right;
 }
-.logo img {
+.logo .logo-img {
     width: 100%;
 }
 .logo .more-inf {
@@ -34,7 +34,7 @@ body {
 .task-row-wrapper {
     display: flex;
 }
-ul {
+.page {
     margin:0;
     padding: 0px;
 }
@@ -134,21 +134,21 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.page li input[type=text] {
     display:none
 }
 
-ul li.edit-Mode input[type=text] {
+.page .edit-Mode input[type=text] {
     display:inline-block;
     width:224px
 }
 
-ul li.edit-Mode label {
+.page .edit-Mode label {
     display:none;
 }
