--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -141,7 +141,7 @@ li > label {
 }
 
 li >    input[type="text"] {
-    width: 226px
+    width: 226px;
 }
 
 li > button.delete:hover {
@@ -160,18 +160,18 @@ button.delete img:hover {
 
 /* Completed */
 #completed-tasks label {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 .page li input[type=text] {
-    display: none
+    display: none;
 }
 
 .page .edit-Mode input[type=text] {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .page .edit-Mode label {
